<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.duckduckgo.app.dev.settings.DevSettingsActivity">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/include_default_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.duckduckgo.mobile.android.ui.view.text.SectionHeaderTextView
                android:id="@+id/privacyAuditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auditSettingsScreenPrivacyAuditSection"/>

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/auditStep1Title"
                app:secondaryText="@string/auditStep1Subtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/step2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/auditStep2Title"
                app:secondaryText="@string/auditStep2Subtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/step3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/auditStep3Title"
                app:secondaryText="@string/auditStep3Subtitle" />

            <com.duckduckgo.mobile.android.ui.view.text.SectionHeaderTextView
                android:id="@+id/refTestsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auditSettingsScreenRefTestsSection"/>

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/requestBlocking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/requestBlockingTitle"
                app:secondaryText="@string/requestBlockingSubtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/requestBlockingDisabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/requestBlockingDisabledTitle"
                app:secondaryText="@string/requestBlockingDisabledSubtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/httpsUpgrades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/httpsUpgradesTitle"
                app:secondaryText="@string/httpsUpgradesSubtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/fireButtonStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/fireButtonStoreTitle"
                app:secondaryText="@string/fireButtonStoreSubtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/fireButtonRetrieve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/fireButtonRetrieveTitle"
                app:secondaryText="@string/fireButtonRetrieveSubtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/cookies3pStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/cookies3pStoreTitle"
                app:secondaryText="@string/cookies3pStoreSubtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/cookies3pRetrieve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/cookies3pRetrieveTitle"
                app:secondaryText="@string/cookies3pRetrieveSubtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/gpc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/gpcTitle"
                app:secondaryText="@string/gpcSubtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/gpcOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/gpcOtherTitle"
                app:secondaryText="@string/gpcOtherSubtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/surrogates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/surrogatesTitle"
                app:secondaryText="@string/surrogatesSubtitle" />

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                android:id="@+id/surrogatesDisabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/surrogatesDisabledTitle"
                app:secondaryText="@string/surrogatesDisabledSubtitle" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>