<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/noAppId"
        android:title="@string/devSettingsScreenUserAgentNoAppId" />
    <item android:id="@+id/noVersion"
        android:title="@string/devSettingsScreenUserAgentNoVersion" />
    <item android:id="@+id/chrome"
        android:title="@string/devSettingsScreenUserAgentChrome" />
    <item android:id="@+id/duckDuckGo"
        android:title="@string/devSettingsScreenUserAgentDuckDuckGo" />
    <item android:id="@+id/firefox"
        android:title="@string/devSettingsScreenUserAgentFirefox" />
    <item android:id="@+id/webView"
        android:title="@string/devSettingsScreenUserAgentWebView" />
</menu>