<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.duckduckgo.app.dev.settings.DevSettingsActivity">

    <include
            android:id="@+id/includeToolbar"
            layout="@layout/include_default_toolbar"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.duckduckgo.mobile.android.ui.view.text.SectionHeaderTextView
                android:id="@+id/generalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devSettingsScreenGeneralSection"/>

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                    android:id="@+id/enableAppStartupTrace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:secondaryText="@string/devStartupTracingByline"
                    app:primaryText="@string/devStartupTracing"
                    app:showSwitch="true"/>

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                    android:id="@+id/triggerAnr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:secondaryText="@string/devSettingsTriggerAnrSubtitle"
                    app:primaryText="@string/devSettingsTriggerAnr"/>

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                    android:id="@+id/clearSavedSites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:secondaryText="@string/devSettingsClearSavedSitesSubtitle"
                    app:primaryText="@string/devSettingsClearSavedSites"/>

            <com.duckduckgo.mobile.android.ui.view.text.SectionHeaderTextView
                android:id="@+id/privacyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devSettingsScreenPrivacySection"/>

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                    android:id="@+id/nextTdsEnabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:secondaryText="@string/devSettingsScreenTdsVersion"
                    app:primaryText="@string/devSettingsScreenTdsVersionSubtitle"
                    app:showSwitch="true"/>

            <com.duckduckgo.mobile.android.ui.view.divider.HorizontalDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"/>

            <com.duckduckgo.mobile.android.ui.view.text.SectionHeaderTextView
                android:id="@+id/userAgentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devSettingsScreenUserAgentSection"/>

            <com.duckduckgo.mobile.android.ui.view.listitem.OneLineListItem
                    android:id="@+id/overrideUserAgentToggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:primaryText="@string/devSettingsScreenUserAgentOverride"
                    app:showSwitch="true"/>

            <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
                    android:id="@+id/overrideUserAgentSelector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:primaryText="@string/devSettingsScreenUserAgentSelectorTitle"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>